# aiogram_2

./: .env.example  .gitignore  main.py  pyproject.toml
book/: book.txt
handlers/: other_handlers.py  user_handlers.py
keyboards/: bookmarks_kb.py  main_menu.py  pagination_kb.py
services/: file_handling.py
