[tool.poetry]
name = "aiogram-2"
version = "0.1.0"
description = ""
authors = ["JanGodar <2017sofin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
